crates/lang/macro/tests/ui/contract/fail/impl-block-for-non-storage-02.stderr
error[E0308]: mismatched types
  --> $DIR/impl-block-for-non-storage-02.rs:21:10
   |
21 |     impl NonContract {}
   |          ^^^^^^^^^^^ expected struct `Contract`, found struct `NonContract`
   |
   = note: expected struct `IsSameType<Contract>`
              found struct `IsSameType<NonContract>`
